--- a/packages/interfaces/index.html
+++ b/packages/interfaces/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-    <title>Bun + React</title>
-    <script type="module" src="./frontend.tsx" async></script>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <title>LilStar BlindBox</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
